--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -5,11 +5,12 @@
 
 }
 
-@media screen and (max-width:1024px) {
-    .lead__image {
-      margin: 56px 28px 0px;}}
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1023px) {
     .lead__image {
-        margin: 56px 0px 0px;}
+      margin: 56px auto 0px;}}
+
+@media screen and (max-width:767px) {
+    .lead__image {
+        margin: 40px 0px 0px;}
     }
