--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,6 +5,13 @@
     margin: 0 auto;
 }
 
+@media screen and (max-width:1279px) {
+    .lead {
+        max-width: 928px;
+    }    
+}
+
+
 @media screen and (max-width:767px) {
     .lead {
         max-width: 320px;
