--- a/blocks/list/list.css
+++ b/blocks/list/list.css
@@ -5,9 +5,9 @@
     list-style: none;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:767px) {
     .list {
         max-width: 288px;
-        margin: 34px auto 0px;
+        margin: 34px auto 0px 0px;
     }
 }
