--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,8 +3,17 @@
     text-decoration: none;
     color: #FFFFFF;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    font-size: 16px;
+    line-height: 18px;
 }
 
 .footer__links:hover {
     opacity: 0.3;
+}
+
+@media screen and (max-width:767px) {
+    .footer__links {
+        font-size: 24px;
+        line-height: 24px;
+    }
 }
