--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,5 +8,8 @@
 @media screen and (max-width:767px) {
     .intro__title {
         max-width: 288px;
-        margin: 0 auto;
-    }}
+        margin: 0 auto 0 0;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
