--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,5 +5,21 @@
     font-size: 10px;
     line-height: 14px;
     margin: 8px 0px 0px 0px;
-    text-transform: uppercase;  
+    text-transform: uppercase; 
+    
 }
+
+@media screen and (max-width:1023px) {
+    .lead__caption {
+        align-self: flex-start; 
+        margin-left: 24px;
+    }   
+}
+
+@media screen and (max-width:767px) {
+    .lead__caption {
+        margin-left: 16px;
+        
+    }
+}
+
