--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,25 +1,23 @@
 .lead__caption {
-    color: #FFFFFF;
-    width: 158px;
-    height: 14px;
-    font-size: 10px;
-    line-height: 14px;
-    margin: 8px 0px 0px 0px;
-    text-transform: uppercase; 
-    
+  color: #FFFFFF;
+  font-size: 10px;
+  line-height: 14px;
+  margin: 8px 0px 0px 0px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+
 }
 
 @media screen and (max-width:1023px) {
-    .lead__caption {
-        align-self: flex-start; 
-        margin-left: 24px;
-    }   
+  .lead__caption {
+    align-self: flex-start;
+    margin-left: 24px;
+  }
 }
 
 @media screen and (max-width:767px) {
-    .lead__caption {
-        margin-left: 16px;
-        
-    }
-}
+  .lead__caption {
+    margin-left: 16px;
 
+  }
+}
