--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,18 +1,19 @@
 .cover__subtitle {
-    font-size: 18px;
-    line-height: 22px;
-    color: #FFFFFF;
-    margin: 0 0 100px 0;
-    max-width: 360px;
-    text-align: center;
-    position: relative;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  margin: 0 0 100px 0;
+  max-width: 360px;
+  text-align: center;
+  position: relative;
+  z-index: 1;
 }
 
 @media screen and (max-width:767px) {
-    .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
-        max-width: 288px;
-        margin-bottom: 0px;
-    }
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    max-width: 288px;
+    margin-bottom: 0px;
+  }
 }
