--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,18 +1,18 @@
 .lead__subtitle {
-    max-width: 640px;
-    margin: 32px auto 0px;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: normal;
+  max-width: 640px;
+  margin: 32px auto 0px;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: 400;
 }
 
 @media screen and (max-width:767px) {
-    .lead__subtitle {
-        font-size: 16px;
-        line-height: 20px;
-        margin: 16px auto 0px;
-        
-    }
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 16px auto 0px;
+
+  }
 }
