--- a/blocks/list/__text/list__text.css
+++ b/blocks/list/__text/list__text.css
@@ -1,7 +1,6 @@
 .list__text {
-    color: #ffffff;
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 18px;   
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
 }
-
