--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,21 +1,19 @@
 .page {
-    margin: 0 auto;
-    width: 100%;  
-    font-family: 'Inter';
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%; 
-    text-rendering: optimizeLegibility;
-  }
+  margin: 0 auto;
+  max-width: 1280px;
+  font-family: 'Inter', Arial, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+}
 
+body {
+  background-color: #2A2C2F;
+}
 
-  body {
-    background-color: #2A2C2F;
-  }
-
-  
-  /* div, main, header, section, h1, h2,p, a, img {
+/* div, main, header, section, h1, h2,p, a, img {
     border: 1px solid red;
   }
