--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,22 +1,23 @@
 .place__title {
-    color: #FFFFFF;
-    font-size: 72px;
-    line-height: 76px;
-    margin: 0px 0px 0px 0px;
+  color: #FFFFFF;
+  font-size: 72px;
+  line-height: 76px;
+  margin: 0px 0px 0px 0px;
+  font-weight: 900;
 }
 
 @media screen and (max-width:1023px) {
-    .place__title {
-        font-size: 42px;
-        line-height: 46px;
-    }
+  .place__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
 }
 
 @media screen and (max-width:767px) {
-    .place__title {
-        font-size: 32px;
-        line-height: 35px;
-        min-width: 288px;
-        margin: 0 auto;
-    }
+  .place__title {
+    font-size: 32px;
+    line-height: 35px;
+    min-width: 288px;
+    margin: 0 auto;
+  }
 }
