--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,12 +1,13 @@
 .place__url-heading {
-    margin-bottom: 12px;
-    color: #AAAAAA;
-    font-size: 12px;
-    line-height: 20.4px;
+  margin-bottom: 12px;
+  color: #AAAAAA;
+  font-size: 12px;
+  line-height: 20.4px;
+  letter-spacing: 2px;
 }
 
 @media screen and (max-width:1023px) {
-    .place__url-heading {
-        line-height: 12px;
-    }
+  .place__url-heading {
+    line-height: 12px;
+  }
 }
