--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,8 @@
 .place__title {
-  color: #FFFFFF;
+  color: #FFF;
   font-size: 72px;
   line-height: 76px;
-  margin: 0px 0px 0px 0px;
+  margin: 0;
   font-weight: 900;
 }
 
