--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,8 @@
-/* Normalize and page */
+/* Normalize, page, fonts */
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts/Inter/inter.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/content/content.css);
-
-/* Подключаем шрифты */
-
-@import url(../vendor/fonts/Inter/inter.css);
 
 /* Подключаем блок header */
 @import url(../blocks/header/header.css);
@@ -25,7 +22,6 @@
 /* Подключаем блок intro */
 
 @import url(../blocks/intro/intro.css);
-@import url(../blocks/intro/__wrapper/intro__wrapper.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/list/__numbers/list__numbers.css);
@@ -51,18 +47,15 @@
 
 /*Подключаем блок Cover */
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__wrapper/cover__wrapper.css);
 @import url(../blocks/cover/__link/cover__link.css);
-@import url(../blocks/cover/__background/cover__background.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
 
 /* Подключаем блок Footer */
 
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__wrapper/footer__wrapper.css);
 @import url(../blocks/footer/__navigation/footer__navigation.css);
 @import url(../blocks/footer/__link-list/footer__link-list.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__wrapper/footer__wrapper.css);
