--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,8 +1,8 @@
 .cover__subtitle {
   font-size: 18px;
   line-height: 22px;
-  color: #FFFFFF;
-  margin: 0 0 100px 0;
+  color: #FFF;
+  margin: 0 0 0 0;
   max-width: 360px;
   text-align: center;
   position: relative;
