--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,32 +1,19 @@
 .cover__title {
   font-size: 72px;
   line-height: 76px;
-  color: #FFFF;
-  margin: 245px 0 32px 0;
+  color: #FFF;
   max-width: 560px;
   text-align: center;
   font-weight: 900;
-  position: relative;
   z-index: 1;
-}
-
-@media screen and (max-width:1279px) {
-  .cover__title {
-    margin-top: 195px;
-  }
-}
-
-@media screen and (max-width:1023px) {
-  .cover__title {
-    margin-top: 115px;
-  }
+  position: relative;
+  margin-bottom: 32px;
 }
 
 @media screen and (max-width:767px) {
   .cover__title {
-    margin-top: 33px;
     font-size: 32px;
     line-height: 35px;
-    max-width: 288px;
+    margin-bottom: 16px;
   }
 }
