--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,7 @@
 .footer__copyright {
   font-size: 14px;
   line-height: 16px;
-  color: #FFFFFF;
+  color: #FFF;
   margin: 0 0 0 0;
   padding-top: 2px;
 }
