--- a/blocks/footer/__wrapper/footer__wrapper.css
+++ b/blocks/footer/__wrapper/footer__wrapper.css
@@ -1,8 +1,7 @@
 .footer__wrapper {
-  margin: 0 0 0 0;
-  padding: 0 0 0 0;
+  margin: 0;
+  padding: 0;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
 }
 
