--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,26 @@
 .footer {
-  margin: 92px auto 24px;
+  margin: 92px auto 0px;
+  padding-bottom: 24px;
   width: 92.5%;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: baseline;
   flex-wrap: wrap;
   max-width: 1184px;
+}
+
+@media screen and (max-width:1279px) {
+  .footer {
+    max-width: 928px;
+    margin-top: 92px;
+  }
+}
+
+@media screen and (max-width:1023px) {
+  .footer {
+    max-width: 720px;
+    margin-top: 88px;
+  }
 }
 
 @media screen and (max-width:767px) {
@@ -14,6 +28,6 @@
     display: flex;
     flex-direction: column;
     max-width: 186px;
-    margin: 64px 16px 24px;
+    margin: 64px 16px 0px;
   }
 }
