--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,14 +1,18 @@
 .header__lang-link {
-  color: #FFFFFF;
-  margin: 46px 18px 6px auto;
+  color: #FFF;
+  margin: 18px 18px 6px auto;
   font-size: 24px;
   line-height: 28px;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
   text-decoration: none;
+  max-height: 28px;
+  max-width: 30px;
 }
 
 .header__lang-link:last-of-type {
   margin-right: 0px;
+  margin-left: 0px;
+  padding: none;
 }
 
 .header__lang-link:hover {
