--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
   max-width: 640px;
   margin: 32px auto 0px;
-  color: #FFFFFF;
+  color: #FFF;
   text-align: center;
   font-size: 30px;
   line-height: 36px;
