--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,6 @@
 .lead__title {
-  color: #FFFFFF;
+  color: #FFF;
   max-width: 720px;
-  height: 200px;
   margin: 0px auto;
   text-align: center;
   font-size: 96px;
@@ -12,7 +11,6 @@
 @media screen and (max-width:767px) {
   .lead__title {
     max-width: 288px;
-    height: 88px;
     font-size: 40px;
     line-height: 44px;
   }
