--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,7 +1,9 @@
 .place__link {
-  color: #FFFFFF;
+  color: #FFF;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
-  margin: 0 0 0 0;
+  margin: 0;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 .place__link:hover {
